--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,19 @@ html body {
     font-family: "Prompt", sans-serif;
 }
 
+
 .back-to-top {
     position: fixed;
     bottom: 40px;
+    width: 50px;
+    height: 50px;
+    z-index: 9999;
+    right: 2%;
+    cursor: pointer;
+}
+.comment-s {
+    position: fixed;
+    bottom: 95px;
     width: 50px;
     height: 50px;
     z-index: 9999;
@@ -213,6 +223,18 @@ html body {
     padding: 200px 0px 150px;
     background: linear-gradient(rgba(0, 0, 0, .65), rgba(0, 0, 0, .65)), url(../../assets/images/คลินิกเฉพาะทาง/22.jpg) center center no-repeat;
     background-size: cover;
+}
+
+.page-xray {
+    padding: 200px 0px 150px;
+    background: linear-gradient(rgba(0, 0, 0, .65), rgba(0, 0, 0, .65)), url(../../assets/images/คลินิกเฉพาะทาง/23.jpg) center center no-repeat;
+    background-size: cover
+}
+
+.page-resarch{
+    padding: 200px 0px 150px;
+    background: linear-gradient(rgba(0, 0, 0, .65), rgba(0, 0, 0, .65)), url(../../assets/images/คลินิกเฉพาะทาง/24.jpg) center center no-repeat;
+    background-size: cover
 }
 
 .page-header {
@@ -647,3 +669,5 @@ html body {
     color: #00a2ff;
     text-shadow: 2px 2px 5px #6cc9ff;
 }
+
+
